# cube-engine

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  flake.nix  run_build.sh  run_tests.sh  vcpkg.json
.github/workflows/: appimage.yml  build.yml  cmake.yml  macos.yml  release.yml  windows.yml
dev/: AppImageBuilder.yml  CubeCore.desktop
dev/cmake/: BuildAppdir.cmake
res/: window-property.yml
res/shader/: crosshair.frag  crosshair.vert  main.frag  main.vert
src/: CMakeLists.txt  main.cpp
src/camera/: Camera.cpp  Camera.h
src/cube/: Chunk.cpp  Chunk.h  Chunks.cpp  Chunks.h  Cube.cpp  Cube.h
src/event/: EventManager.cpp  EventManager.h  InputState.cpp  InputState.h
src/graphic/: CubeRenderer.cpp  CubeRenderer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/include/: stb_image.h
src/loader/: ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
src/property/: WindowProperty.cpp  WindowProperty.h
src/reader/: FileReader.cpp  FileReader.h
src/window/: Window.cpp  Window.h
tests/: CMakeLists.txt  test_main.cpp
tests/loader/: ShaderLoaderTest.cpp  TextureLoaderTest.cpp
tests/property/: WindowPropertyTest.cpp
tests/reader/: FileReaderTest.cpp
